--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 Under construction!
+=======================
 
-Have a look at this awesome sign: \tr
+Have a look at this awesome sign:  
 
 
 
----------------------------- 
-|    HELLO WORLD           | 
-|                          | 
----------------------------- 
+----------------------------   
+|    HELLO WORLD           |   
+|                          |   
+----------------------------   
