changed to HTML

--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
+<!DOCTYPE html>
+
+<html>
+<body>
+
 Under construction!
 =======================
+<br>
 
 Have a look at this awesome sign:  
+<br>
 
 
-
-----------------------------   
-|    HELLO WORLD           |   
-|                          |   
-----------------------------   
+----------------------------<br>   
+|    HELLO WORLD           |   <br>
+|                          |   <br>
+---------------------------- <br<br>>
+</body>
+</html>  
